Lab-1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error SEMI
    9       | Specifier error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag
   17                | STRUCT error LC DefList RC
   18                | STRUCT OptTag LC error RC
   19                | STRUCT OptTag LC error
   20                | STRUCT error

   21 OptTag: ID
   22       | ε

   23 Tag: ID

   24 VarDec: ID
   25       | VarDec LB INT RB
   26       | VarDec LB error RB
   27       | VarDec LB error

   28 FunDec: ID LP VarList RP
   29       | ID LP RP
   30       | ID LP error RP
   31       | ID LP error

   32 VarList: ParamDec COMMA VarList
   33        | ParamDec

   34 ParamDec: Specifier VarDec

   35 CompSt: LC DefList StmtList RC

   36 StmtList: Stmt StmtList
   37         | ε

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt
   44     | error SEMI
   45     | IF LP error RP Stmt
   46     | IF LP Exp RP error ELSE Stmt
   47     | IF LP error RP ELSE Stmt
   48     | error LP Exp RP Stmt

   49 DefList: Def DefList
   50        | ε

   51 Def: Specifier DecList SEMI

   52 DecList: Dec
   53        | Dec COMMA DecList
   54        | Dec error DecList

   55 Dec: VarDec
   56    | VarDec ASSIGNOP Exp
   57    | error ASSIGNOP Exp

   58 Exp: Exp ASSIGNOP Exp
   59    | Exp AND Exp
   60    | Exp OR Exp
   61    | Exp RELOP Exp
   62    | Exp PLUS Exp
   63    | Exp MINUS Exp
   64    | Exp STAR Exp
   65    | Exp DIV Exp
   66    | LP Exp RP
   67    | MINUS Exp
   68    | NOT Exp
   69    | ID LP Args RP
   70    | ID LP RP
   71    | Exp LB Exp RB
   72    | Exp DOT ID
   73    | ID
   74    | INT
   75    | FLOAT
   76    | Exp ASSIGNOP error
   77    | Exp AND error
   78    | Exp OR error
   79    | Exp RELOP error
   80    | Exp PLUS error
   81    | Exp MINUS error
   82    | Exp STAR error
   83    | Exp DIV error
   84    | ID LP error RP
   85    | Exp LB error RB

   86 Args: Exp COMMA Args
   87     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 17 18 19 20 26 27 30 31 44 45 46 47 48 54 57 76 77 78 79 80 81 82 83 84 85
    INT (258) 25 74
    FLOAT (259) 75
    ID (260) 21 23 24 28 29 30 31 69 70 72 73 84
    SEMI (261) 4 5 7 8 38 40 44 51
    COMMA (262) 11 12 32 53 86
    ASSIGNOP (263) 56 57 58 76
    RELOP (264) 61 79
    PLUS (265) 62 80
    MINUS (266) 63 67 81
    STAR (267) 64 82
    DIV (268) 65 83
    AND (269) 59 77
    OR (270) 60 78
    DOT (271) 72
    NOT (272) 68
    TYPE (273) 13
    LP (274) 28 29 30 31 41 42 43 45 46 47 48 66 69 70 84
    RP (275) 28 29 30 41 42 43 45 46 47 48 66 69 70 84
    LB (276) 25 26 27 71 85
    RB (277) 25 26 71 85
    LC (278) 15 17 18 19 35
    RC (279) 15 17 18 35
    STRUCT (280) 15 16 17 18 19 20
    RETURN (281) 40
    IF (282) 41 42 45 46 47
    ELSE (283) 42 46 47
    WHILE (284) 43
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (35)
        on left: 10 11 12
        on right: 4 11 12
    Specifier (36)
        on left: 13 14
        on right: 4 5 6 7 9 34 51
    StructSpecifier (37)
        on left: 15 16 17 18 19 20
        on right: 14
    OptTag (38)
        on left: 21 22
        on right: 15 18 19
    Tag (39)
        on left: 23
        on right: 16
    VarDec (40)
        on left: 24 25 26 27
        on right: 10 11 12 25 26 27 34 55 56
    FunDec (41)
        on left: 28 29 30 31
        on right: 6
    VarList (42)
        on left: 32 33
        on right: 28 32
    ParamDec (43)
        on left: 34
        on right: 32 33
    CompSt (44)
        on left: 35
        on right: 6 39
    StmtList (45)
        on left: 36 37
        on right: 35 36
    Stmt (46)
        on left: 38 39 40 41 42 43 44 45 46 47 48
        on right: 36 41 42 43 45 46 47 48
    DefList (47)
        on left: 49 50
        on right: 15 17 35 49
    Def (48)
        on left: 51
        on right: 49
    DecList (49)
        on left: 52 53 54
        on right: 51 53 54
    Dec (50)
        on left: 55 56 57
        on right: 52 53 54
    Exp (51)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 38 40 41 42 43 46 48 56 57 58 59 60 61 62 63 64 65 66 67 68 71 72 76 77 78 79 80 81 82 83 85 86 87
    Args (52)
        on left: 86 87
        on right: 69 86


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   13 Specifier: TYPE •

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT • OptTag LC DefList RC
   16                | STRUCT • Tag
   17                | STRUCT • error LC DefList RC
   18                | STRUCT • OptTag LC error RC
   19                | STRUCT • OptTag LC error
   20                | STRUCT • error

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 22 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error SEMI
    9       | Specifier • error

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   14 Specifier: StructSpecifier •

    $default  reduce using rule 14 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   17 StructSpecifier: STRUCT error • LC DefList RC
   20                | STRUCT error •

    LC  shift, and go to state 22

    $default  reduce using rule 20 (StructSpecifier)


State 11

   21 OptTag: ID •
   23 Tag: ID •

    LC        reduce using rule 21 (OptTag)
    $default  reduce using rule 23 (Tag)


State 12

   15 StructSpecifier: STRUCT OptTag • LC DefList RC
   18                | STRUCT OptTag • LC error RC
   19                | STRUCT OptTag • LC error

    LC  shift, and go to state 23


State 13

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    7 ExtDef: Specifier error • SEMI
    9       | Specifier error •

    SEMI  shift, and go to state 24

    $default  reduce using rule 9 (ExtDef)


State 17

   24 VarDec: ID •
   28 FunDec: ID • LP VarList RP
   29       | ID • LP RP
   30       | ID • LP error RP
   31       | ID • LP error

    LP  shift, and go to state 25

    $default  reduce using rule 24 (VarDec)


State 18

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 26


State 20

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   12           | VarDec • error COMMA ExtDecList
   25 VarDec: VarDec • LB INT RB
   26       | VarDec • LB error RB
   27       | VarDec • LB error

    error  shift, and go to state 27
    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    SEMI  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 30

    CompSt  go to state 31


State 22

   17 StructSpecifier: STRUCT error LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 50 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 23

   15 StructSpecifier: STRUCT OptTag LC • DefList RC
   18                | STRUCT OptTag LC • error RC
   19                | STRUCT OptTag LC • error

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 50 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 34


State 24

    7 ExtDef: Specifier error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 25

   28 FunDec: ID LP • VarList RP
   29       | ID LP • RP
   30       | ID LP • error RP
   31       | ID LP • error

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 40
    ParamDec         go to state 41


State 26

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 27

   12 ExtDecList: VarDec error • COMMA ExtDecList

    COMMA  shift, and go to state 42


State 28

   11 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 20


State 29

   25 VarDec: VarDec LB • INT RB
   26       | VarDec LB • error RB
   27       | VarDec LB • error

    error  shift, and go to state 45
    INT    shift, and go to state 46


State 30

   35 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 50 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 34


State 31

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 32

   51 Def: Specifier • DecList SEMI

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 33

   17 StructSpecifier: STRUCT error LC DefList • RC

    RC  shift, and go to state 52


State 34

   49 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 50 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 34


State 35

   18 StructSpecifier: STRUCT OptTag LC error • RC
   19                | STRUCT OptTag LC error •

    RC  shift, and go to state 54

    $default  reduce using rule 19 (StructSpecifier)


State 36

   15 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 55


State 37

   30 FunDec: ID LP error • RP
   31       | ID LP error •

    RP  shift, and go to state 56

    $default  reduce using rule 31 (FunDec)


State 38

   29 FunDec: ID LP RP •

    $default  reduce using rule 29 (FunDec)


State 39

   34 ParamDec: Specifier • VarDec

    ID  shift, and go to state 43

    VarDec  go to state 57


State 40

   28 FunDec: ID LP VarList • RP

    RP  shift, and go to state 58


State 41

   32 VarList: ParamDec • COMMA VarList
   33        | ParamDec •

    COMMA  shift, and go to state 59

    $default  reduce using rule 33 (VarList)


State 42

   12 ExtDecList: VarDec error COMMA • ExtDecList

    ID  shift, and go to state 43

    ExtDecList  go to state 60
    VarDec      go to state 20


State 43

   24 VarDec: ID •

    $default  reduce using rule 24 (VarDec)


State 44

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 45

   26 VarDec: VarDec LB error • RB
   27       | VarDec LB error •

    RB  shift, and go to state 61

    $default  reduce using rule 27 (VarDec)


State 46

   25 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 62


State 47

   35 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 30
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 74
    Stmt      go to state 75
    Exp       go to state 76


State 48

   57 Dec: error • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 77


State 49

   25 VarDec: VarDec • LB INT RB
   26       | VarDec • LB error RB
   27       | VarDec • LB error
   55 Dec: VarDec •
   56    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 78
    LB        shift, and go to state 29

    $default  reduce using rule 55 (Dec)


State 50

   51 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 79


State 51

   52 DecList: Dec •
   53        | Dec • COMMA DecList
   54        | Dec • error DecList

    error  shift, and go to state 80
    COMMA  shift, and go to state 81

    SEMI  reduce using rule 52 (DecList)


State 52

   17 StructSpecifier: STRUCT error LC DefList RC •

    $default  reduce using rule 17 (StructSpecifier)


State 53

   49 DefList: Def DefList •

    $default  reduce using rule 49 (DefList)


State 54

   18 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 18 (StructSpecifier)


State 55

   15 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 15 (StructSpecifier)


State 56

   30 FunDec: ID LP error RP •

    $default  reduce using rule 30 (FunDec)


State 57

   25 VarDec: VarDec • LB INT RB
   26       | VarDec • LB error RB
   27       | VarDec • LB error
   34 ParamDec: Specifier VarDec •

    LB  shift, and go to state 29

    $default  reduce using rule 34 (ParamDec)


State 58

   28 FunDec: ID LP VarList RP •

    $default  reduce using rule 28 (FunDec)


State 59

   32 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 39
    StructSpecifier  go to state 8
    VarList          go to state 82
    ParamDec         go to state 41


State 60

   12 ExtDecList: VarDec error COMMA ExtDecList •

    $default  reduce using rule 12 (ExtDecList)


State 61

   26 VarDec: VarDec LB error RB •

    $default  reduce using rule 26 (VarDec)


State 62

   25 VarDec: VarDec LB INT RB •

    $default  reduce using rule 25 (VarDec)


State 63

   44 Stmt: error • SEMI
   48     | error • LP Exp RP Stmt

    SEMI  shift, and go to state 83
    LP    shift, and go to state 84


State 64

   74 Exp: INT •

    $default  reduce using rule 74 (Exp)


State 65

   75 Exp: FLOAT •

    $default  reduce using rule 75 (Exp)


State 66

   69 Exp: ID • LP Args RP
   70    | ID • LP RP
   73    | ID •
   84    | ID • LP error RP

    LP  shift, and go to state 85

    $default  reduce using rule 73 (Exp)


State 67

   67 Exp: MINUS • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 86


State 68

   68 Exp: NOT • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 87


State 69

   66 Exp: LP • Exp RP

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 88


State 70

   40 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 89


State 71

   41 Stmt: IF • LP Exp RP Stmt
   42     | IF • LP Exp RP Stmt ELSE Stmt
   45     | IF • LP error RP Stmt
   46     | IF • LP Exp RP error ELSE Stmt
   47     | IF • LP error RP ELSE Stmt

    LP  shift, and go to state 90


State 72

   43 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 91


State 73

   39 Stmt: CompSt •

    $default  reduce using rule 39 (Stmt)


State 74

   35 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 92


State 75

   36 StmtList: Stmt • StmtList

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 30
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 93
    Stmt      go to state 75
    Exp       go to state 76


State 76

   38 Stmt: Exp • SEMI
   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 77

   57 Dec: error ASSIGNOP • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 105


State 78

   56 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 106


State 79

   51 Def: Specifier DecList SEMI •

    $default  reduce using rule 51 (Def)


State 80

   54 DecList: Dec error • DecList

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 107
    Dec      go to state 51


State 81

   53 DecList: Dec COMMA • DecList

    error  shift, and go to state 48
    ID     shift, and go to state 43

    VarDec   go to state 49
    DecList  go to state 108
    Dec      go to state 51


State 82

   32 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 32 (VarList)


State 83

   44 Stmt: error SEMI •

    $default  reduce using rule 44 (Stmt)


State 84

   48 Stmt: error LP • Exp RP Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 109


State 85

   69 Exp: ID LP • Args RP
   70    | ID LP • RP
   84    | ID LP • error RP

    error  shift, and go to state 110
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    RP     shift, and go to state 111

    Exp   go to state 112
    Args  go to state 113


State 86

   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   67    | MINUS Exp •
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    STAR  shift, and go to state 99
    DIV   shift, and go to state 100
    DOT   shift, and go to state 103
    LB    shift, and go to state 104

    $default  reduce using rule 67 (Exp)


State 87

   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   68    | NOT Exp •
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    DOT  shift, and go to state 103
    LB   shift, and go to state 104

    $default  reduce using rule 68 (Exp)


State 88

   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   66    | LP Exp • RP
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    RP        shift, and go to state 114
    LB        shift, and go to state 104


State 89

   40 Stmt: RETURN Exp • SEMI
   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    SEMI      shift, and go to state 115
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 90

   41 Stmt: IF LP • Exp RP Stmt
   42     | IF LP • Exp RP Stmt ELSE Stmt
   45     | IF LP • error RP Stmt
   46     | IF LP • Exp RP error ELSE Stmt
   47     | IF LP • error RP ELSE Stmt

    error  shift, and go to state 116
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 117


State 91

   43 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 118


State 92

   35 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 35 (CompSt)


State 93

   36 StmtList: Stmt StmtList •

    $default  reduce using rule 36 (StmtList)


State 94

   38 Stmt: Exp SEMI •

    $default  reduce using rule 38 (Stmt)


State 95

   58 Exp: Exp ASSIGNOP • Exp
   76    | Exp ASSIGNOP • error

    error  shift, and go to state 119
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 120


State 96

   61 Exp: Exp RELOP • Exp
   79    | Exp RELOP • error

    error  shift, and go to state 121
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 122


State 97

   62 Exp: Exp PLUS • Exp
   80    | Exp PLUS • error

    error  shift, and go to state 123
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 124


State 98

   63 Exp: Exp MINUS • Exp
   81    | Exp MINUS • error

    error  shift, and go to state 125
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 126


State 99

   64 Exp: Exp STAR • Exp
   82    | Exp STAR • error

    error  shift, and go to state 127
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 128


State 100

   65 Exp: Exp DIV • Exp
   83    | Exp DIV • error

    error  shift, and go to state 129
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 130


State 101

   59 Exp: Exp AND • Exp
   77    | Exp AND • error

    error  shift, and go to state 131
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 132


State 102

   60 Exp: Exp OR • Exp
   78    | Exp OR • error

    error  shift, and go to state 133
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 134


State 103

   72 Exp: Exp DOT • ID

    ID  shift, and go to state 135


State 104

   71 Exp: Exp LB • Exp RB
   85    | Exp LB • error RB

    error  shift, and go to state 136
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 137


State 105

   57 Dec: error ASSIGNOP Exp •
   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104

    $default  reduce using rule 57 (Dec)


State 106

   56 Dec: VarDec ASSIGNOP Exp •
   58 Exp: Exp • ASSIGNOP Exp
   59    | Exp • AND Exp
   60    | Exp • OR Exp
   61    | Exp • RELOP Exp
   62    | Exp • PLUS Exp
   63    | Exp • MINUS Exp
   64    | Exp • STAR Exp
   65    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • DOT ID
   76    | Exp • ASSIGNOP error
   77    | Exp • AND error
   78    | Exp • OR error
   79    | Exp • RELOP error
   80    | Exp • PLUS error
   81    | Exp • MINUS error
   82    | Exp • STAR error
   83    | Exp • DIV error
   85    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104

    $default  reduce using rule 56 (Dec)


State 107

   54 DecList: Dec error DecList •
